Overflow Hidden Issue

--- a/apps/web/src/app/design/css/components/pinion.css
+++ b/apps/web/src/app/design/css/components/pinion.css
@@ -81,3 +81,7 @@
     @apply max-w-base;
   }
 }
+
+.pinion-mediaWithText {
+  @apply overflow-hidden;
+}
